# deezer-oauth-cli

./: .all-contributorsrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  renovate.json  setup.py
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  codeql.yml  hacktoberfest.yml  poetry-upgrade.yml  upgrader.yml
deezer_oauth/: main.py  page_template.html
docs/source/: conf.py  index.md  installation.md  usage.md
src/deezer_oauth/: __main__.py  client.py  constants.py  files.py  main.py  rich_typer.py  server.py
templates/: .changelog-old.md
tests/: test_client.py  test_dunder_main.py  test_files.py  test_main.py  test_server.py
