[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=1" ]

[tool.poetry]
name = "deezer-oauth-cli"
version = "1.3.1"
description = "A small CLI to quickly obtain an API token for Deezer API."
authors = [ "Bruno Alla <alla.brunoo@gmail.com>" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/browniebroke/deezer-oauth-cli"
documentation = "https://github.com/browniebroke/deezer-oauth-cli/blob/main/README.md"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3.12",
]
packages = [
  { include = "deezer_oauth", from = "src" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/browniebroke/deezer-oauth-cli/issues"
"Changelog" = "https://github.com/browniebroke/deezer-oauth-cli/blob/main/CHANGELOG.md"
"Twitter" = "https://twitter.com/_BrunoAlla"
"Mastodon" = "https://fosstodon.org/@browniebroke"

[tool.poetry.scripts]
deezer-oauth = "deezer_oauth.main:app"

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.27.0"
rich = ">=10"
typer = { extras = [ "all" ], version = ">=0.12.0" }

[tool.poetry.group.dev.dependencies]
pyfakefs = "^5.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.6"
respx = "^0.21.1"

[tool.ruff]
target-version = "py38"
line-length = 88

lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflake
  "I",   # isort
  "RUF", # ruff specific
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D401", # First line of docstring should be in imperative mood
]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]
lint.isort.known-first-party = [ "deezer_oauth", "tests" ]

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=deezer_oauth --cov-report=term-missing:skip-covered"
pythonpath = [ "src" ]

[tool.coverage.run]
branch = true

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "if TYPE_CHECKING",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.semantic_release]
version_toml = [ "pyproject.toml:tool.poetry.version" ]
version_variables = [
  "src/deezer_oauth/__init__.py:__version__",
]
build_command = "pip install poetry && poetry build"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "chore.*",
  "ci.*",
  "Merge pull request .*",
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true
