[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "deezer-oauth-cli"
version = "1.5.1"
description = "A small CLI to quickly obtain an API token for Deezer API."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Bruno Alla", email = "alla.brunoo@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "httpx>=0.27",
  "rich>=10",
  "typer>=0.12",
]
urls."Bug Tracker" = "https://github.com/browniebroke/deezer-oauth-cli/issues"
urls.Changelog = "https://github.com/browniebroke/deezer-oauth-cli/blob/main/CHANGELOG.md"
urls.documentation = "https://github.com/browniebroke/deezer-oauth-cli/blob/main/README.md"
urls.Mastodon = "https://fosstodon.org/@browniebroke"
urls.repository = "https://github.com/browniebroke/deezer-oauth-cli"
urls.Twitter = "https://twitter.com/_BrunoAlla"
scripts.deezer-oauth = "deezer_oauth.main:app"

[dependency-groups]
dev = [
  "pyfakefs>=5,<6",
  "pytest>=8,<9",
  "pytest-cov>=6,<7",
  "pytest-mock>=3.6,<4",
  "respx>=0.22",
]

[tool.ruff]
target-version = "py39"
line-length = 88

lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflake
  "I",   # isort
  "RUF", # ruff specific
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D401", # First line of docstring should be in imperative mood
]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]
lint.isort.known-first-party = [ "deezer_oauth", "tests" ]

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=deezer_oauth --cov-report=term-missing:skip-covered"
pythonpath = [ "src" ]

[tool.coverage.run]
branch = true

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "if TYPE_CHECKING",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [
  "src/deezer_oauth/__init__.py:__version__",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "chore.*",
  "ci.*",
  "Merge pull request .*",
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true
